# resend_api_in_rust

./: .gitignore  Cargo.toml  README.md
ez_resend_lib/: Cargo.toml
ez_resend_lib/src/: lib.rs
send_email/: Cargo.toml
send_email/src/: main.rs
src/: main.rs
src/components/: mod.rs  resend.rs
