[package]
name = "ez_resend_lib"
version = "0.1.0"
authors = ["Stephen Ezekwem <stephen.ezekwem@ezektec.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
dotenv = "0.15.0"

