[package]
name = "send_email"
version = "0.1.0"
edition = "2021"
authors = ["engr-uba <stephen.ezekwem@ezektec.com>"]

[dependencies]
ez_resend_lib = { path = "../ez_resend_lib" }
tokio = { version = "1.1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
dotenv = "0.15.0"


[[bin]]
name = "send_email"
path = "src/main.rs"

